--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -2,10 +2,7 @@
 
 name: Docker CD
 
-on:
-  push:
-    paths:
-      - "**Dockerfile**"
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -68,4 +65,4 @@ jobs:
           tag_with_sha: true
     
 
-    
+
